--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 
 			<div class="container">
 				<div id="header-foto-text">
-					<h3>ILLUMINIGHT</h3>
+					<h3>ILLUMI
+						NIGHT</h3>
 					<p>A MODERN BEDTIME STORY.
 					</p>
 				</div>
