cleanup css and tags

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="Lumu is a light meter for the iPhone. Changing the way we think about light meters. For photographers with a heartbeat, individuals with a lifestyle, aspirations and dreams. ">
 	<meta name="keywords" content="Lumu, pocket, light, meter, photography, video">
 	<meta name="author" content="Lumulabs">
-	<link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
+	<!--<link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">-->
 
 	<title>Lumu</title><!-- Bootstrap core CSS -->
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css"><!-- Custom styles for this template -->
@@ -27,7 +27,7 @@
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 						<span class="sr-only">Toggle navigation</span>
 					</button>
-					<a class="navbar-brand" href="index.html"><img src="img/Illuminight_logofinal.png" alt="logo_white" height="80"></a>
+					<a class="navbar-brand" href="index.html"><img src="img/Illuminight_logofinal.png" alt="logo_white"></a>
 
 				</div>
 
@@ -53,14 +53,11 @@
 
 			<div class="container">
 				<div id="header-foto-text">
-					<h3>ILLUMI
-						NIGHT</h3>
+					<h3>ILLUMINIGHT</h3>
 					<p>A MODERN BEDTIME STORY.
 					</p>
 				</div>
-
-				</div>
-			</div>
+            </div>
 		</div>
 		
 	</div>
@@ -109,7 +106,8 @@
 
 			<h3>LUMU IS A LIGHT METER<br> FOR YOUR IPHONE.</h3>
 			<br>
-			<img src="img/illuminight.png" alt="iphone_6_small" width="100%">
+            <!-- TODO: Make cd/box image-->
+			<img src="img/cd-and-box.png" alt="box_pic" width="100%">
 		</div>
 
 		<!-- ================================SECTION2================================ -->
