deleted scrolling pictures and the smooth_div_scroll plugin setup

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<meta name="author" content="Lumulabs">
 	<!--<link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">-->
 
-	<title>Lumu</title><!-- Bootstrap core CSS -->
+	<title>Illuminight</title><!-- Bootstrap core CSS -->
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css"><!-- Custom styles for this template -->
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
@@ -109,28 +109,6 @@
             <!-- TODO: Make cd/box image-->
 			<img src="img/cd-and-box.png" alt="box_pic" width="100%">
 		</div>
-
-		<!-- ================================SECTION2================================ -->
-		<div id="lumu-effect" >
-			<div class="container text-center">
-
-				<h3 >IT HELPS YOU CREATE MEMORIES LIKE NEVER BEFORE.</h3>
-
-			</div>
-
-			<div id="fotomosaic">
-				<img src="images/fotomosaic.jpg">
-				<img src="images/fotomosaic.jpg">
-			</div>
-
-
-
-			<div id="lumu-effect-copyright" class="text-right">
-				<h4 style="font-size: 12px; color: rgba(0,0,0,0.4); padding-right: 10px;"> All photos were created by our Lumu users all around the world. </h4>
-			</div>
-
-		</div>
-
 
 		<!-- ================================THREE STEPS================================ -->
 
@@ -243,35 +221,6 @@
 		<script src="js/greensock/TweenMax.min.js" type="text/javascript">
 		</script>
 		<script src="js/jquery.superscrollorama.js" type="text/javascript">
-		</script>
-
-			<!-- jQuery UI (Custom Download containing only Widget and Effects Core)
-			You can make your own at: http://jqueryui.com/download -->
-			<script src="js/tkahn-Smooth-Div-Scroll/js/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
-
-	<!-- Latest version (3.1.4) of jQuery Mouse Wheel by Brandon Aaron
-	You will find it here: https://github.com/brandonaaron/jquery-mousewheel -->
-	<script src="js/tkahn-Smooth-Div-Scroll/js/jquery.mousewheel.min.js" type="text/javascript"></script>
-
-	<!-- jQuery Kinectic (1.8.2) used for touch scrolling -->
-	<!-- https://github.com/davetayls/jquery.kinetic/ -->
-	<script src="js/tkahn-Smooth-Div-Scroll/js/jquery.kinetic.min.js" type="text/javascript"></script>	
-
-	<!-- Smooth Div Scroll 1.3 minified-->
-	<script src="js/tkahn-Smooth-Div-Scroll/js/jquery.smoothdivscroll-1.3-min.js" type="text/javascript"></script>
-
-		<!-- If you want to look at the uncompressed version you find it at
-		js/jquery.smoothDivScroll-1.3.js -->
-
-		<!-- Plugin initialization -->
-		<script type="text/javascript">
-			// Initialize the plugin with no custom options
-			$(document).ready(function () {
-				// None of the options are set
-				$("div#fotomosaic").smoothDivScroll({
-					autoScrollingMode: "always"
-				});
-			});
 		</script>
 
 
