deleted smooth_div_scroll plugin

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css"><!-- Custom styles for this template -->
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
-	<link rel="Stylesheet" type="text/css" href="js/tkahn-Smooth-Div-Scroll/css/smoothDivScroll.css" />
 </head>
 
 <body id="discover">
@@ -188,12 +187,10 @@
 		<div id="footer-foto">
 			<div id="foto-background" style="position: relative;">
 				<p id="footer-photo-text" class="text-center">
-					The journey begins here.
-					<button id='moments-shop-button' onclick="parent.location='http://shop.lu.mu'" class="btn btn-danger btn-lg btn-lumu" style="padding: 20px 40px;">BUY LUMU</button>
+					LET YOUR IMAGINATION TAKE SHAPE.
+					<button id='moments-shop-button' onclick="parent.location='http://shop.lu.mu'" class="btn btn-primary btn-lg btn-illuminight" style="padding: 20px 40px;">BUY ILLUMINIGHT</button>
 				</p>
-				<p id="footer-copyright">
-					Photo by Arthur Galvao
-				</p>
+
 			</div>
 		</div>
 
