--- a/index.html
+++ b/index.html
@@ -148,33 +148,30 @@
 		<div id="quotes">
 			<div class="container">
 				<div class="row text-center">
-					<a href="http://www.theverge.com/2014/5/1/5669000/lumu-light-meter-iphone-photography">
 					<div class="col-sm-4">
 							<p>
-								“... accurate, whether my daughter was playing in bright sunlight or sitting in the shade.”
+								“I'm not afraid of the dark anymore!”
 							</p>
 							<div class="quote-source">
-								<img src="images/quote-verge.png" height="25px">
+								<img src="img/lucy.png" height="25px">
 							</div>
 						</div>
 					</a>
-					<a href="http://uncrate.com/stuff/lumu-light-meter/">
 						<div class="col-sm-4">
 							<p>
-								“... nothing beats shooting with a real light meter.”
+								“... a real joy. Put my chidgens right to sleep.”
 							</p>
 							<div class="quote-source">
 								<img src="images/quote-uncrate.png" height="25px" >
 							</div>
 						</div>
 					</a>
-					<a href="http://www.cultofmac.com/232288/lumu-iphone-lightmeter-connects-via-headphone-jack/">
 						<div class="col-sm-4">
 							<p>
-								“In other words, it can see in the dark.”
+								“... revolutionizing the way stories are told.”
 							</p>
 							<div class="quote-source"> 
-								<img src="images/quote-cultofmac.png" height="25px">
+								<img src="img/wired_logo.jpg" height="25px">
 							</div>
 						</div>
 					</a>
