--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 		</div>
 
 		<!-- ================================THREE STEPS================================ -->
-
+<!--TODO: Figure out what to do here...-->
 		<div id="three-steps">
 			<h3 class="text-center">IT IS TRULY SIMPLE TO USE.</h3>
 			<a href="apps/"><p class="text-center">Learn more about the Photo, Video and Pinhole apps.</p></a>
