changed quote for uncrate

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 					</a>
 						<div class="col-sm-4">
 							<p>
-								“... a real joy. Put my chidgens right to sleep.”
+								“... a real joy ... put my chidgens right to sleep.”
 							</p>
 							<div class="quote-source">
 								<img src="images/quote-uncrate.png" height="25px" >
