--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 					<ul class="nav navbar-nav links">
 
 						<li class="discover"><a href="index.html">DISCOVER</a></li>
-						<li class="features"><a href="apps/">COST</a></li>
-						<li class="story"><a href="lightmeter/">INSTRUCTIONS</a></li>
-						<li class="story"><a href="http://blog.lu.mu/">PHYSICS</a></li>
+						<li class="cost"><a href="cost.html">COST</a></li>
+						<li class="instructions"><a href="instructions.html">INSTRUCTIONS</a></li>
+						<li class="physics"><a href="physics.html">PHYSICS</a></li>
 
 					</ul>
 
@@ -95,9 +95,6 @@
 			</div>
 			<div id="light-meter-title">
 				<h3>LUMU IS A LIGHT METER<br> FOR YOUR IPHONE.</h3>
-				<p>
-				<a href="lightmeter/">Learn more about the build and performance.</a>
-				</p>
 			</div>
 		</div>
 
@@ -113,8 +110,6 @@
 <!--TODO: Figure out what to do here...-->
 		<div id="three-steps">
 			<h3 class="text-center">IT IS TRULY SIMPLE TO USE.</h3>
-			<a href="apps/"><p class="text-center">Learn more about the Photo, Video and Pinhole apps.</p></a>
-
 			<div class="container text-center three-steps-container">
 				<div class="col-sm-4">
 					<div class="three-steps-step">
@@ -156,8 +151,7 @@
 								<img src="img/lucy.png" height="25px">
 							</div>
 						</div>
-					</a>
-						<div class="col-sm-4">
+                    <div class="col-sm-4">
 							<p>
 								“... a real joy ... put my chidgens right to sleep.”
 							</p>
@@ -165,8 +159,7 @@
 								<img src="images/quote-uncrate.png" height="25px" >
 							</div>
 						</div>
-					</a>
-						<div class="col-sm-4">
+                    <div class="col-sm-4">
 							<p>
 								“... revolutionizing the way stories are told.”
 							</p>
@@ -174,8 +167,7 @@
 								<img src="img/wired_logo.jpg" height="25px">
 							</div>
 						</div>
-					</a>
-				</div>
+                </div>
 			</div>
 		</div>
 
