Normalize image names

--- a/instructions.html
+++ b/instructions.html
@@ -26,7 +26,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="img/Illuminight_logofinal.png" alt="logo_white"></a>
+                <a class="navbar-brand" href="index.html"><img src="img/illuminight_logofinal.png" alt="logo_white"></a>
 
             </div>
 
@@ -48,17 +48,93 @@
     <!-- ================================HEADER================================ -->
 
 
-    <div class="header-foto">
+    <div class="header-foto-instructions">
 
         <div class="container">
             <div id="header-foto-text">
-                <h3>ILLUMINIGHT</h3>
-                <p>A MODERN BEDTIME STORY.
+                <h3>TELL A STORY</h3>
+                <p>EFFORTLESSLY.
                 </p>
             </div>
         </div>
     </div>
 
+</div>
+
+<!-- ================================SECTION1================================ -->
+<div id="light-meter-container" class="visible-md visible-lg">
+    <div id="light-meter" class="container text-center">
+        <div id="traveling-lumu">
+            <div id="rotating-lumu">
+                <ol id="frame-list">
+                    <li class="active"></li>
+                    <li class="active"></li>
+                    <li class="active"></li>
+                    <li class="active"></li>
+                    <li class="active"></li>
+                    <li class="active"></li>
+                    <li class="active"></li>
+                    <li class="active"></li>
+                    <li class="active"></li>
+                    <li class="active"></li>
+                    <li class="active"></li>
+                    <li class="active"></li>
+                    <li class="active"></li>
+                </ol>
+            </div>
+        </div>
+        <div id="iphone-spacer" style="height: 200px;"></div>
+        <!--
+        <div id="debug">
+            DEBUG
+        </div>
+    -->
+        <div id="iphone-lumu">
+            <div id="iphone-screen-2"></div>
+        </div>
+    </div>
+    <div id="light-meter-title">
+        <h3>UNLEASH A NEW GENERATION OF STORYTELLING.</h3>
+    </div>
+</div>
+
+<div id="light-meter-small" class="visible-xs visible-sm text-center">
+
+    <h3>ILLUMINIGHT IS A NEW WAY TO TELL A STORY.</h3>
+    <br>
+    <!-- TODO: Make cd/box image-->
+    <img src="img/cd-and-box.png" alt="box_pic" width="100%">
+</div>
+
+<!-- ================================THREE STEPS================================ -->
+<!--TODO: Figure out what to do here...-->
+<div id="three-steps">
+    <h3 class="text-center">IT IS TRULY SIMPLE TO USE.</h3>
+    <div class="container text-center three-steps-container">
+        <div class="col-sm-4">
+            <div class="three-steps-step">
+                <img src="img/illuminight_cd.png">
+                <br>
+                1. CHOOSE A STORY DISC
+
+            </div>
+
+        </div>
+        <div class="col-sm-4">
+            <div class="three-steps-step">
+                <img src="img/illuminight_box.png">
+                <br>
+                2. PLACE ON MOUNT
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class="three-steps-step">
+                <img src="img/illuminight_box_light.png">
+                <br>
+                3. FLIP THE SWITCH AND PUSH THE LIGHT
+            </div>
+        </div>
+    </div>
 </div>
 
 <!-- ================================FOOTER================================ -->
@@ -123,8 +199,6 @@
 </script>
 
 <script src="http://ip-api.com/json/?callback=jsonpCallback" type="text/javascript" async></script>
-
-
 
 </body>
 </html>
