--- a/instructions.html
+++ b/instructions.html
@@ -80,6 +80,9 @@
                     <li class="active"></li>
                     <li class="active"></li>
                     <li class="active"></li>
+                    <li class="active"></li>
+                    <li class="active"></li>
+                    <li class="active"></li>
                 </ol>
             </div>
         </div>
