possible photo viewer on Home page, added pics

--- a/index.html
+++ b/index.html
@@ -61,6 +61,115 @@
 		
 	</div>
 
+	<!-- SLIDES-->
+
+	<div id="carousel-lifestyle" class="carousel slide container" data-ride="carousel">
+		<div id="made-title" class="text-center">
+			<h3>Experience Illuminight. </h3>
+			<h4>Let's put a little magic into night lights.</h4>
+		</div>
+		<!-- Indicators -->
+		<ol class="carousel-indicators">
+			<li data-target="#carousel-lifestyle" data-slide-to="0" class=""></li>
+			<li data-target="#carousel-lifestyle" data-slide-to="1" class=""></li>
+			<li data-target="#carousel-lifestyle" data-slide-to="2" class=""></li>
+			<li data-target="#carousel-lifestyle" data-slide-to="3" class=""></li>
+			<!-- <li data-target="#carousel-lifestyle" data-slide-to="4"></li> -->
+
+		</ol>
+
+		<!-- Wrapper for slides -->
+		<div class="carousel-inner">
+			<div class="item">
+				<div id="slide-1" class="carousel-slide" style="height: 641.25px;">
+					<img src="../img/open_box.jpg" height="1691" width="3000" style="display: none;">
+				</div>
+			</div>
+			<!-- <div class="item">
+				<div id="slide-2" class="carousel-slide">
+					<img src="../images/lifestyle_2.jpg" height="2001" width="3000" style="display: none;">
+				</div>
+			</div> -->
+			<div class="item">
+				<div id="slide-2" class="carousel-slide" style="height: 641.25px;">
+					<img src="../img/closed_box.jpg" height="644" width="1024" style="display: none;">
+				</div>
+			</div>
+			<div class="item active left">
+				<div id="slide-3" class="carousel-slide" style="height: 641.25px;">
+					<img src="../img/toy_gearside.jpg" height="394" width="700" style="display: none;">
+				</div>
+			</div>
+			<div class="item next left">
+				<div id="slide-4" class="carousel-slide" style="height: 641.25px;">
+					<img src="../img/.jpg" height="394" width="700" style="display: none;">
+				</div>
+			</div>
+
+		</div>
+
+		<!-- Controls -->
+		<!-- 	<a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+            </a>
+            <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+            </a> -->
+	</div>
+
+	<!--&lt;!&ndash; PICTURES SECTION-->
+	<!--&lt;!&ndash;&ndash;&gt;&ndash;&gt;-->
+	<!--<div class="product-pictures">-->
+
+		<!--<div class="product-container">-->
+			<!--<div id="news-section">-->
+				<!--<div class="text-center" id="news-container">-->
+					<!--<a href="express-yourself/">-->
+						<!--<div class="col-sm-4" id="news-ansel" style="padding-top:80px;">-->
+							<!--&lt;!&ndash;<h3>&ndash;&gt;-->
+								<!--&lt;!&ndash;Ansel Adams Challenge.&ndash;&gt;-->
+							<!--&lt;!&ndash;</h3>&ndash;&gt;-->
+							<!--&lt;!&ndash;<h4>&ndash;&gt;-->
+								<!--&lt;!&ndash;Explore the campaign and see the results.&ndash;&gt;-->
+							<!--</h4>-->
+
+						<!--</div>-->
+					<!--</a>-->
+					<!--<a href="apps/index.html#dev-apps">-->
+						<!--<div class="col-sm-4" id="news-apps" style="padding-top:30px;">-->
+							<!--&lt;!&ndash;<h3>&ndash;&gt;-->
+								<!--&lt;!&ndash;Light in New Ways.&ndash;&gt;-->
+							<!--&lt;!&ndash;</h3>&ndash;&gt;-->
+							<!--&lt;!&ndash;<h4>&ndash;&gt;-->
+								<!--&lt;!&ndash;Try new Lumu apps from other developers.&ndash;&gt;-->
+							<!--&lt;!&ndash;</h4>&ndash;&gt;-->
+						<!--</div>-->
+					<!--</a>-->
+					<!--<a href="http://blog.lu.mu/">-->
+						<!--<div class="col-sm-4" id="news-blog" style="padding-top:80px;">-->
+							<!--&lt;!&ndash;<h3>&ndash;&gt;-->
+								<!--&lt;!&ndash;Lumutribe.&ndash;&gt;-->
+							<!--&lt;!&ndash;</h3>&ndash;&gt;-->
+							<!--&lt;!&ndash;<h4>&ndash;&gt;-->
+								<!--&lt;!&ndash;Stories and samples from Lumu devotees. Get inspired.&ndash;&gt;-->
+							<!--&lt;!&ndash;</h4>&ndash;&gt;-->
+						<!--</div>-->
+					<!--</a>-->
+						<!--<div class="col-sm-4" id="news-gears" style="padding-top:80px;">-->
+							<!--&lt;!&ndash;<h3>&ndash;&gt;-->
+							<!--&lt;!&ndash;Lumutribe.&ndash;&gt;-->
+							<!--&lt;!&ndash;</h3>&ndash;&gt;-->
+						<!--&lt;!&ndash;<h4>&ndash;&gt;-->
+							<!--&lt;!&ndash;Stories and samples from Lumu devotees. Get inspired.&ndash;&gt;-->
+						<!--&lt;!&ndash;</h4>&ndash;&gt;-->
+					<!--</div>-->
+				<!--</div>-->
+			<!--</div>-->
+			<!--<div id="product-foto-text">-->
+				<!--<h3>*ages 3+*<br>*WARNINGS* DO NOT EAT. DO NOT SHAKE OR PLACE UPSIDE DOWN. DO NOT USE IN WATER. DO NOT STARE DIRECTLY AT THE LIGHT.</h3>-->
+			<!--</div>-->
+		<!--</div>-->
+	<!--</div>-->
 		<!-- =========================================================================== -->
 		<!-- =============================QUOTES SECTION================================ -->
 		<!-- =========================================================================== -->
@@ -69,7 +178,7 @@
 				<div class="row text-center">
 					<div class="col-sm-4">
 							<p>
-								“I'm not afraid of the dark anymore!”
+								“I'm not afraid of the dark anymore!”<br> ~ age 5
 							</p>
 							<div class="quote-source">
 								<img src="img/lucy.png" height="25px">
@@ -101,7 +210,7 @@
 			<div id="foto-background" style="position: relative;">
 				<p id="footer-photo-text" class="text-center">
 					LET YOUR IMAGINATION TAKE SHAPE.
-					<button id='moments-shop-button' onclick="parent.location='http://shop.lu.mu'" class="btn btn-primary btn-lg btn-illuminight" style="padding: 20px 40px;">BUY ILLUMINIGHT</button>
+					<button id='moments-shop-button' onclick="parent.location='http://amazon.com'" class="btn btn-primary btn-lg btn-illuminight" style="padding: 20px 40px;">BUY ILLUMINIGHT</button>
 				</p>
 
 			</div>
