added pictures. added instructions.

--- a/instructions.html
+++ b/instructions.html
@@ -51,7 +51,7 @@
     <div class="header-foto-instructions">
 
         <div class="container">
-            <div id="header-foto-text">
+            <div id="header-foto-text-instructions">
                 <h3>TELL A STORY</h3>
                 <p>EFFORTLESSLY.
                 </p>
@@ -61,56 +61,8 @@
 
 </div>
 
-<!-- ================================SECTION1================================ -->
-<div id="light-meter-container" class="visible-md visible-lg">
-    <div id="light-meter" class="container text-center">
-        <div id="traveling-lumu">
-            <div id="rotating-lumu">
-                <ol id="frame-list">
-                    <li class="active"></li>
-                    <li class="active"></li>
-                    <li class="active"></li>
-                    <li class="active"></li>
-                    <li class="active"></li>
-                    <li class="active"></li>
-                    <li class="active"></li>
-                    <li class="active"></li>
-                    <li class="active"></li>
-                    <li class="active"></li>
-                    <li class="active"></li>
-                    <li class="active"></li>
-                    <li class="active"></li>
-                    <li class="active"></li>
-                    <li class="active"></li>
-                    <li class="active"></li>
-                </ol>
-            </div>
-        </div>
-        <div id="iphone-spacer" style="height: 200px;"></div>
-        <!--
-        <div id="debug">
-            DEBUG
-        </div>
-    -->
-        <div id="iphone-lumu">
-            <div id="iphone-screen-2"></div>
-        </div>
-    </div>
-    <div id="light-meter-title">
-        <h3>UNLEASH A NEW GENERATION OF STORYTELLING.</h3>
-    </div>
-</div>
-
-<div id="light-meter-small" class="visible-xs visible-sm text-center">
-
-    <h3>ILLUMINIGHT IS A NEW WAY TO TELL A STORY.</h3>
-    <br>
-    <!-- TODO: Make cd/box image-->
-    <img src="img/cd-and-box.png" alt="box_pic" width="100%">
-</div>
 
 <!-- ================================THREE STEPS================================ -->
-<!--TODO: Figure out what to do here...-->
 <div id="three-steps">
     <h3 class="text-center">IT IS TRULY SIMPLE TO USE.</h3>
     <div class="container text-center three-steps-container">
@@ -136,6 +88,114 @@
                 <br>
                 3. FLIP THE SWITCH AND PUSH THE LIGHT
             </div>
+        </div>
+    </div>
+</div>
+
+<!--DETAILED INSTRUCTIONS-->
+
+<div id="tech-specs-table">
+    <div class="row">
+        <div class="col-sm-6 text-right">
+            <p style="font-weight: 400;">
+                Step 1
+            </p>
+        </div>
+        <div class="col-sm-6">
+            <p>
+                Select a story disk.
+            </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-6 text-right">
+            <p style="font-weight: 400;">
+                Step 2
+            </p>
+        </div>
+        <div class="col-sm-6">
+            <p>
+                Take off lid.
+            </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-6 text-right">
+            <p style="font-weight: 400;">
+                Step 3
+            </p>
+        </div>
+        <div class="col-sm-6">
+            <p>
+                Push the light down on the area covered in black tape.
+            </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-6 text-right">
+            <p style="font-weight: 400;">
+                Step 4
+            </p>
+        </div>
+        <div class="col-sm-6">
+            <p>
+                Flip the switch that is located on the side that says "K'NEX".
+            </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-6 text-right">
+            <p style="font-weight: 400;">
+                Step 5
+            </p>
+        </div>
+        <div class="col-sm-6">
+            <p>
+                Place disc on gear platform face down, allowing the magnets to lock.
+            </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-6 text-right">
+            <p style="font-weight: 400;">
+                Light receptor diffuser type
+            </p>
+        </div>
+        <div class="col-sm-6">
+            <p>
+                Hemispherical diffuser, cardioid-type.
+            </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-6 text-right">
+            <p style="font-weight: 400;">
+                Power source
+            </p>
+        </div>
+        <div class="col-sm-6">
+            <p>
+                Mobile device.
+            </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-6 text-right">
+            <p style="font-weight: 400;">
+                Requirements
+            </p>
+        </div>
+        <div class="col-sm-6">
+            <p>
+                iOS devices (iOS7 and newer).
+            </p>
         </div>
     </div>
 </div>
