--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 		<!-- Wrapper for slides -->
 		<div class="carousel-inner">
 			<div class="item">
-				<div id="slide-1" class="carousel-slide" style="height: 641.25px;">
-					<img src="../img/open_box.jpg" height="1691" width="3000" style="display: none;">
+				<div id="slide-1" class="carousel-slide" style="height: 641px;">
+					<img src="img/open_box.jpg" height="641" width="962" style="display: none;">
 				</div>
 			</div>
 			<!-- <div class="item">
@@ -91,18 +91,18 @@
 				</div>
 			</div> -->
 			<div class="item">
-				<div id="slide-2" class="carousel-slide" style="height: 641.25px;">
-					<img src="../img/closed_box.jpg" height="644" width="1024" style="display: none;">
+				<div id="slide-2" class="carousel-slide" style="height: 641px;">
+					<img src="img/closed_box.jpg" height="641" width="962" style="display: none;">
 				</div>
 			</div>
 			<div class="item active left">
-				<div id="slide-3" class="carousel-slide" style="height: 641.25px;">
-					<img src="../img/toy_gearside.jpg" height="394" width="700" style="display: none;">
+				<div id="slide-3" class="carousel-slide" style="height: 641px;">
+					<img src="img/toy_gearside.jpg" height="641" width="962" style="display: none;">
 				</div>
 			</div>
 			<div class="item next left">
-				<div id="slide-4" class="carousel-slide" style="height: 641.25px;">
-					<img src="../img/.jpg" height="394" width="700" style="display: none;">
+				<div id="slide-4" class="carousel-slide" style="height: 641px;">
+					<img src="img/disc.jpg" height="641" width="962" style="display: none;">
 				</div>
 			</div>
 
@@ -241,7 +241,21 @@
 		</script>
 		<script src="js/jquery.superscrollorama.js" type="text/javascript">
 		</script>
+        <script>
+            $( document ).ready(function() {
+                $('.carousel').carousel({
+                    interval: 3000
+                    // pause: "none"
+                })
+            });
+        </script>
 
+        <script type="text/javascript">
+            $(window).on( 'resize', function () {
+                $('.carousel-slide').height( $('#carousel-lifestyle').width() * 9/16 );
+                // $('#debug').text($('.carousel-slide').height() + " - "+$('.carousel-slide').width()+ " - "+ $('#carousel-lifestyle').width() + " - "+$('.carousel-slide').width()/$('.carousel-slide').height());
+            }).resize();
+        </script>
 
 		<!-- Mobile front page fixes -->
 		<script type="text/javascript" src="http://modernizr.com/downloads/modernizr-latest.js"></script>
