cost and instructions pages

--- a/instructions.html
+++ b/instructions.html
@@ -97,6 +97,14 @@
 <div id="tech-specs-table">
     <div class="row">
         <div class="col-sm-6 text-right">
+            <p style="font-weight: 900;">
+                BUT IF YOU NEED MORE DETAILS...
+            </p>
+        </div>
+
+    </div>
+    <div class="row">
+        <div class="col-sm-6 text-right">
             <p style="font-weight: 400;">
                 Step 1
             </p>
@@ -129,7 +137,7 @@
         </div>
         <div class="col-sm-6">
             <p>
-                Push the light down on the area covered in black tape.
+                Place disc on gear platform face down, allowing the magnets to lock by lining up the blue lines on the gear platform and disc.
             </p>
         </div>
     </div>
@@ -155,7 +163,7 @@
         </div>
         <div class="col-sm-6">
             <p>
-                Place disc on gear platform face down, allowing the magnets to lock.
+                Push the light down on the area covered in black tape.
             </p>
         </div>
     </div>
@@ -163,12 +171,12 @@
     <div class="row">
         <div class="col-sm-6 text-right">
             <p style="font-weight: 400;">
-                Light receptor diffuser type
+                Step 6
             </p>
         </div>
         <div class="col-sm-6">
             <p>
-                Hemispherical diffuser, cardioid-type.
+                Replace lid.
             </p>
         </div>
     </div>
@@ -176,12 +184,11 @@
     <div class="row">
         <div class="col-sm-6 text-right">
             <p style="font-weight: 400;">
-                Power source
+                Step 7
             </p>
         </div>
         <div class="col-sm-6">
-            <p>
-                Mobile device.
+            <p>Gently place on stable surface in an area with an open ceiling.
             </p>
         </div>
     </div>
@@ -189,12 +196,12 @@
     <div class="row">
         <div class="col-sm-6 text-right">
             <p style="font-weight: 400;">
-                Requirements
+                Step 8
             </p>
         </div>
         <div class="col-sm-6">
             <p>
-                iOS devices (iOS7 and newer).
+                Lie down in bed and watch the pretty images scare away the darkness.
             </p>
         </div>
     </div>
