--- a/cost.html
+++ b/cost.html
@@ -48,12 +48,12 @@
     <!-- ================================HEADER================================ -->
 
 
-    <div class="header-foto">
+    <div class="header-foto-cost">
 
         <div class="container">
-            <div id="header-foto-text">
-                <h3>ILLUMINIGHT</h3>
-                <p>A MODERN BEDTIME STORY.
+            <div id="header-foto-text-cost">
+                <h3>A REVOLUTIONARY NIGHT LIGHT</h3>
+                <p>AT AN AFFORDABLE PRICE
                 </p>
             </div>
         </div>
@@ -61,11 +61,110 @@
 
 </div>
 
+<!-- ==================================COST INFO=================================== -->
+<div id="tech-specs-table">
+    <div class="row">
+        <div class="col-sm-6 text-right">
+            <p style="font-weight: 900;">
+                COST BREAKDOWN
+            </p>
+        </div>
+
+    </div>
+    <div class="row">
+        <div class="col-sm-6 text-right">
+            <p style="font-weight: 400;">
+                Motor System
+            </p>
+        </div>
+        <div class="col-sm-6">
+            <p>
+                $2
+            </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-6 text-right">
+            <p style="font-weight: 400;">
+                Disc Element
+            </p>
+        </div>
+        <div class="col-sm-6">
+            <p>$0.20
+            </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-6 text-right">
+            <p style="font-weight: 400;">
+                Light        
+            </p>
+        </div>
+        <div class="col-sm-6">
+            <p>
+                $1.50
+            </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-6 text-right">
+            <p style="font-weight: 400;">
+                Box
+            </p>
+        </div>
+        <div class="col-sm-6">
+            <p>
+                $0.50
+            </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-6 text-right">
+            <p style="font-weight: 400;">
+                Packaging
+            </p>
+        </div>
+        <div class="col-sm-6">
+            <p>
+                $0.50
+            </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-6 text-right">
+            <p style="font-weight: 400;">
+                Gross Margin
+            </p>
+        </div>
+        <div class="col-sm-6">
+            <p>
+                50%
+            </p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-6 text-right">
+            <p style="font-weight: 400;">
+                MSRP
+            </p>
+        </div>
+        <div class="col-sm-6">
+            <p>
+                $14.99
+            </p>
+        </div>
+    </div>
+
 <!-- ================================FOOTER================================ -->
 
 
 <footer>
-
     <p>&copy; Illuminight 2015</p>
 </footer>
 
