cost and instructions pages

--- a/cost.html
+++ b/cost.html
@@ -62,9 +62,9 @@
 </div>
 
 <!-- ==================================COST INFO=================================== -->
-<div id="tech-specs-table">
+<div id="tech-specs-table" class="container-fluid">
     <div class="row">
-        <div class="col-sm-6 text-right">
+        <div class="col-md-12">
             <p style="font-weight: 900;">
                 COST BREAKDOWN
             </p>
@@ -72,37 +72,37 @@
 
     </div>
     <div class="row">
-        <div class="col-sm-6 text-right">
+        <div class="col-md-4">
             <p style="font-weight: 400;">
                 Motor System
             </p>
         </div>
-        <div class="col-sm-6">
+        <div class="col-md-4">
             <p>
-                $2
+                $2.00
             </p>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-sm-6 text-right">
+        <div class="col-md-4">
             <p style="font-weight: 400;">
                 Disc Element
             </p>
         </div>
-        <div class="col-sm-6">
+        <div class="col-md-4">
             <p>$0.20
             </p>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-sm-6 text-right">
+        <div class="col-md-4">
             <p style="font-weight: 400;">
                 Light        
             </p>
         </div>
-        <div class="col-sm-6">
+        <div class="col-md-4">
             <p>
                 $1.50
             </p>
@@ -110,12 +110,12 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-6 text-right">
+        <div class="col-md-4">
             <p style="font-weight: 400;">
                 Box
             </p>
         </div>
-        <div class="col-sm-6">
+        <div class="col-md-4">
             <p>
                 $0.50
             </p>
@@ -123,12 +123,12 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-6 text-right">
+        <div class="col-md-4">
             <p style="font-weight: 400;">
                 Packaging
             </p>
         </div>
-        <div class="col-sm-6">
+        <div class="col-md-4">
             <p>
                 $0.50
             </p>
@@ -136,12 +136,12 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-6 text-right">
+        <div class="col-md-4">
             <p style="font-weight: 400;">
                 Gross Margin
             </p>
         </div>
-        <div class="col-sm-6">
+        <div class="col-md-4">
             <p>
                 50%
             </p>
@@ -149,18 +149,18 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-6 text-right">
+        <div class="col-md-4">
             <p style="font-weight: 400;">
                 MSRP
             </p>
         </div>
-        <div class="col-sm-6">
+        <div class="col-md-4">
             <p>
                 $14.99
             </p>
         </div>
     </div>
-
+</div>
 <!-- ================================FOOTER================================ -->
 
 
