--- a/instructions.html
+++ b/instructions.html
@@ -96,7 +96,7 @@
 
 <div id="tech-specs-table">
     <div class="row">
-        <div class="col-sm-6 text-right">
+        <div class="col-sm-6 text-left">
             <p style="font-weight: 900;">
                 BUT IF YOU NEED MORE DETAILS...
             </p>
@@ -104,7 +104,7 @@
 
     </div>
     <div class="row">
-        <div class="col-sm-6 text-right">
+        <div class="col-sm-6 text-left">
             <p style="font-weight: 400;">
                 Step 1
             </p>
@@ -117,7 +117,7 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-6 text-right">
+        <div class="col-sm-6 text-left">
             <p style="font-weight: 400;">
                 Step 2
             </p>
@@ -130,7 +130,7 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-6 text-right">
+        <div class="col-sm-6 text-left">
             <p style="font-weight: 400;">
                 Step 3
             </p>
@@ -143,7 +143,7 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-6 text-right">
+        <div class="col-sm-6 text-left">
             <p style="font-weight: 400;">
                 Step 4
             </p>
@@ -156,7 +156,7 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-6 text-right">
+        <div class="col-sm-6 text-left">
             <p style="font-weight: 400;">
                 Step 5
             </p>
@@ -169,7 +169,7 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-6 text-right">
+        <div class="col-sm-6 text-left">
             <p style="font-weight: 400;">
                 Step 6
             </p>
@@ -182,7 +182,7 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-6 text-right">
+        <div class="col-sm-6 text-left">
             <p style="font-weight: 400;">
                 Step 7
             </p>
@@ -194,7 +194,7 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-6 text-right">
+        <div class="col-sm-6 text-left">
             <p style="font-weight: 400;">
                 Step 8
             </p>
