embedded video and more cost page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		
 	</div>
 
-	<!-- SLIDES-->
+	<!-- ======================SLIDES====================-->
 
 	<div id="carousel-lifestyle" class="carousel slide container" data-ride="carousel">
 		<div id="made-title" class="text-center">
@@ -166,7 +166,7 @@
 
 	<!-- ==========================AGE RANGE AND WARNINGS===========================-->
 
-	<p class="apps-text text-center">
+	<p class="apps-text info-text text-center">
         Our mission is to scare away the monsters young children may fear<br>by immersing them in a story that doubles as a night light.<br><br>
         However, Illuminight can be used as a white noise machine to aid troubled sleepers of an older age as well.<br><br>
         Gently introduce to children of young ages that may be frightened by Illuminight at first exposure.<br><br>
@@ -206,6 +206,15 @@
                 </div>
 			</div>
 		</div>
+
+    <!-- =====================YOUTUBE VIDEO EMBED=============-->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-offset-1 col-md-10">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/OHVqErT4ajo" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
+    </div>
 
 		<!-- ================================BUY SECTION================================ -->
 
@@ -269,26 +278,6 @@
 			});
 </script>
 
-<script type="text/javascript">
-  // plain JavaScript example
-  function jsonpCallback(data) { 
-		    // alert('Code: ' + $.inArray(data.countryCode, ['US'])); 
-
-		    if ($.inArray(data.countryCode, ['US']) > -1) {
-		    	$('#shop-button').attr("onClick", "parent.location = 'http://shop-us.lu.mu'" );
-		    	$('#moments-shop-button').attr("onClick", "parent.location = 'http://shop-us.lu.mu'" );
-		    	$('#moments-shop-button-small').attr("onClick", "parent.location = 'http://shop-us.lu.mu'" );
-		    	$('#discount-link').attr("href", "http://shop-us.lu.mu" );
-		    } else {
-		    	$('#shop-button').attr("onClick", "parent.location = 'http://shop.lu.mu'" );
-		    	$('#moments-shop-button').attr("onClick", "parent.location = 'http://shop.lu.mu'" );
-		    	$('#moments-shop-button-small').attr("onClick", "parent.location = 'http://shop.lu.mu'" );
-		    	$('#discount-link').attr("href", "http://shop.lu.mu" );
-		    }
-		 }
-	</script>
-		
-	<script src="http://ip-api.com/json/?callback=jsonpCallback" type="text/javascript" async></script>
 
 
 
