--- a/physics.html
+++ b/physics.html
@@ -48,15 +48,7 @@
     <!-- ================================HEADER================================ -->
 
 
-    <div class="header-foto">
-
-        <div class="container">
-            <div id="header-foto-text">
-                <h3>ILLUMINIGHT</h3>
-                <p>A MODERN BEDTIME STORY.
-                </p>
-            </div>
-        </div>
+    <div class="header-foto-physics">
     </div>
 
 </div>
