Add images to physics page

--- a/physics.html
+++ b/physics.html
@@ -53,6 +53,35 @@
 
 </div>
 
+<!-- ==========================PHYSICS INFO===========================-->
+
+<p class="physics-text text-left">
+    Our mission is to scare away the monsters young children may fear<br>by immersing them in a story that doubles as a night light.<br><br>
+    However, Illuminight can be used as a white noise machine to aid troubled sleepers of an older age as well.<br><br>
+    Gently introduce to children of young ages that may be frightened by Illuminight at first exposure.<br><br>
+    Illuminight is designed for anyone age three and above, but can be used with caution with those younger.<br><br>
+    DO NOT: eat, sit on, use in water, drop, shake, put loose hair near motor, or stare directly at the light.
+</p>
+
+<div class="circuit diagrams">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="circuit_light">
+                    <img src="img/circuit_light.png">
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="circuit_motor">
+                    <img src="img/circuit_motor.png">
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+
 <!-- ================================FOOTER================================ -->
 
 
